<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">startMe</string>
    <string name="app_id">1433922150183075</string>
    <string name="action_settings">Settings</string>

    <string name="title_bar_share">Share</string>

    <string name="hint_share_details">Details..</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_alert">Alert</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_tab_bar">TabBarActivity</string>
    <string name="title_activity_main_root">MainRootActivity</string>
    <string name="title_activity_share_blank">ShareBlankActivity</string>
    <string name="title_activity_take_picture">TakePicture</string>
    <string name="title_button_facebook_login">LOGIN WITH FACEBOOK</string>

    <string name="title_button_signup">Sign Up</string>
    <string name="title_button_signin">Sign In</string>
    <string name="title_button_Cancel">Cancel</string>
    <string name="hint_username">E-mail or Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_confirm_email">Confirm E-mail</string>
    <string name="hint_new_pass">New Password</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="title_button_logout">Logout</string>
    <string name="title_topbar_button_done">Done</string>
    <string name="title_topbar_button_send">Send</string>
    <string name="title_topbar_button_cancel">Cancel</string>

    <string name="message_wrong_email_pass">E-mail and/or password wrong!</string>
    <string name="message_insert_vaild_name">Insert a valid name, thank you.</string>
    <string name="message_insert_vaild_surname">Insert a valid surname, thank you.</string>
    <string name="message_insert_vaild_email">Invalid e-mail: insert a valid e-mail\n(ex. example@gmail.com)</string>
    <string name="message_inequal_email">The e-mails are inequal.</string>

    <string name="message_fb_login_failed">Facebook login failed !</string>




</resources>
