<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_signup">

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@id/edit_signup_firstname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:background="@color/txt_bg_color"
        android:hint="@string/hint_firstname"
        android:textColorHint="@color/txt_fg_color"
        android:textColor="@color/txt_fg_color"
        android:lines="1"
        android:singleLine="true"
        android:padding="8dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@id/edit_signup_lastname"
        android:layout_below="@id/edit_signup_firstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/txt_bg_color"
        android:hint="@string/hint_lastname"
        android:textColor="@color/txt_fg_color"
        android:textColorHint="@color/txt_fg_color"
        android:lines="1"
        android:singleLine="true"
        android:padding="8dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@id/edit_signup_email"
        android:layout_below="@id/edit_signup_lastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/txt_bg_color"
        android:hint="@string/hint_email"
        android:textColor="@color/txt_fg_color"
        android:textColorHint="@color/txt_fg_color"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:padding="8dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@id/edit_signup_confirm_email"
        android:layout_below="@id/edit_signup_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/txt_bg_color"
        android:hint="@string/hint_confirm_email"
        android:textColor="@color/txt_fg_color"
        android:textColorHint="@color/txt_fg_color"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:padding="8dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@id/edit_signup_new_pass"
        android:layout_below="@id/edit_signup_confirm_email"
        android:layout_centerHorizontal="true"
        android:background="@color/txt_bg_color"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_new_pass"
        android:textColor="@color/txt_fg_color"
        android:textColorHint="@color/txt_fg_color"
        android:inputType="textPassword"
        android:lines="1"
        android:singleLine="true"
        android:padding="8dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@id/edit_signup_confirm_pass"
        android:layout_below="@id/edit_signup_new_pass"
        android:layout_centerHorizontal="true"
        android:background="@color/txt_bg_color"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_confirm_pass"
        android:textColor="@color/txt_fg_color"
        android:textColorHint="@color/txt_fg_color"
        android:inputType="textPassword"
        android:lines="1"
        android:singleLine="true"
        android:padding="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_Cancel"
        android:id="@id/button_signup_cancel"
        android:layout_below="@id/edit_signup_confirm_pass"
        android:layout_alignLeft="@id/edit_signup_confirm_pass"
        android:layout_alignStart="@id/edit_signup_confirm_pass"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue"
        android:textColor="@color/txt_fg_color" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_signup"
        android:id="@id/button_signup"
        android:layout_alignTop="@id/button_signup_cancel"
        android:layout_alignRight="@id/edit_signup_confirm_pass"
        android:layout_alignEnd="@id/edit_signup_confirm_pass"
        android:background="@drawable/btn_orange"
        android:textColor="@color/txt_fg_color" />
</RelativeLayout>